--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 
 /* scrollbar */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-track {
@@ -20,7 +20,7 @@
 
 ::-webkit-scrollbar-thumb {
   background: #000000;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 ::-webkit-scrollbar-thumb:hover {
